Fixed the added paragraph, fully incorporated the citations, and moved the text about the reasoning behind SFM to the intro

--- a/MG.tex
+++ b/MG.tex
@@ -477,12 +477,12 @@ Primordial GWs generated during inflation, being generated through parametric re
 \cite{Grishchuk:1976,Grishchuk:1977zz,Starobinsky:1980te,Linde:1981mu,Fabbri:1983us}. We can expect that the signatures of these waves we detect differ from what we expect based on general relativity (GR). In fact, the generation and propagation of these primordial GWs could very well be modified by alternate theories of gravity, including MG, first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. Since then, many attempts have been made to construct a consistent non-linear theory of MG. Any purely linear theory suffers from the van Dam-Veltman-Zakharov (vDVZ) discontinuity \cite{vanDam:1970vg,Zakharov:1970cc}, which prevents the theory from reducing to GR in the massless limit. Attempts have been made to address this, like the nonlinear extensions to the Fierz-Pauli theory that exhibit the Vainshtein mechanism \cite{Vainshtein:1972sx}. This has its own set of problems, like the Boulware-Deser ghost and other ghost degrees of freedom \cite{Boulware:1972yco,Dubovsky:2004sg}. This presents a significant obstacle for trying to come up with a consistent theory.
 
 %CC: This section doesn't have the references properly cited yet. I will work on that soon.
-Recently, attempts have been made to provide ghost-free nonlinear MG  theories, such as the de Rham-Gabadadze-Tolley (dRGT) theory \cite{Hassan:2011tf, Hassan:2011ea, deRham:2010ik,deRham:2010kj}. \red{One of the consequences of the dRGT model is that it does not consist of isotropic solutions at large cosmological scale. Since the isotropy of the universe is a fundamental symmetry, several attempts have been made to avoid anisotropic solutions and retain the stability of perturbations. These attempts include quasidilaton MG \cite{DAmico:2012hia}, the cosmological implications of which were studied in [Gannouji et al. 2013] showing the isotropic background solution but having unstable perturbations around a self-accelerating background [Gumrukcuoglu, et al. 2013]. A further extension, where one also allows for a new type of coupling between the massive graviton and the quasidilaton [De Felice and Mukohyama 2014], on the other hand, does allow for a stable self-accelerated solution. Despite progress in building (extended) quasidilaton MG models resulting in self-accelerated regime, it appears that the Boulware-Deser ghost remains [Mukohyama 2017] with one possible extension to remove the quasidilaton kinetic term; The model stability and perturbations in the absence of matter [Gumrukcuoglu, et al. 2017], while [Kulchoakrungsun et al. 2022].studied perturbations in the presence of matter.  Other extensions of dRGT model include the minimal theory of MG (MTMG) \cite{DeFelice:2015hla,DeFelice:2015moy}, Dirac-Born-Infeld-de Rham-Gabadadze-Tolley [Kazempour, et al. 2022], Brans-Dicke-de Rham-Gabadadze model [Kazempour \& Akbarieh 2022], etc.}
+Recently, attempts have been made to provide ghost-free nonlinear MG  theories, such as the de Rham-Gabadadze-Tolley (dRGT) theory \cite{Hassan:2011tf, Hassan:2011ea, deRham:2010ik,deRham:2010kj}. \red{One of the consequences of the dRGT model is that there are no isotropic solutions at large cosmological scales. Since the isotropy of the universe is a fundamental symmetry, several attempts have been made to avoid anisotropic solutions and retain the stability of perturbations. These attempts include quasidilaton MG \cite{DAmico:2012hia}, where it was shown to have unstable perturbations around a self-accelerating background \cite{Gumrukcuoglu:2013nza}. A further extension, where one also allows for a new type of coupling between the massive graviton and the quasidilaton \cite{DeFelice:2013tsa}, admits a stable self-accelerated solution. Despite progress in building quasidilaton MG models, it appears that the Boulware-Deser ghost remains \cite{Mukohyama:2013raa}. Other extensions of the dRGT model include the minimal theory of MG (MTMG) \cite{DeFelice:2015hla,DeFelice:2015moy}, the Dirac-Born-Infeld-dRGT\cite{Kazempour:2022giy}, and the Brans-Dicke-de Rham-Gabadadze model \cite{Kazempour:2022let}.}
 
-An alternative approach is to do away with Lorentz invariance, allowing gravitons to form a 3D rotation group, e.g. \cite{Arkani-Hamed:2003pdi, Rubakov:2004eb, Dubovsky:2004sg, Blas:2009my, Rubakov:2008nh, Blas:2007zz, Comelli:2013txa, Langlois:2014jba}. This no longer requires the theory to have five degrees of freedom, and one such model has been proposed on these grounds:\ the minimal theory of MG (MTMG) \cite{DeFelice:2015hla, DeFelice:2015moy}, which will be considered in this paper. In this model, we no longer have to consider the Higuchi bound, which ordinarily requires that the ratio of the mass of the graviton to the Hubble scale of inflation be up to an order of unity \cite{Higuchi:1986py}. 
-\red{This model allows for stable Friedmann-Lema\^{\i}tre-Robertson-Walker (FLRW) cosmologies, which other models suffer instabilities in, thereby leading to an experimentally viable cosmology \cite{DeFelice:2015hla}.}
+MTMG proposes a novel modification of dRGT: doing away with Lorentz invariance and allowing gravitons to form a 3D rotation group, e.g. \cite{Arkani-Hamed:2003pdi, Rubakov:2004eb, Dubovsky:2004sg, Blas:2009my, Rubakov:2008nh, Blas:2007zz, Comelli:2013txa, Langlois:2014jba}. This no longer requires the existence of five degrees of freedom, \red{and due to the lack of observations of new propagating degrees of freedom, we consider MTMG in this paper.} In this model, we no longer have to consider the Higuchi bound, which ordinarily requires that the ratio of the mass of the graviton to the Hubble scale of inflation be up to an order of unity \cite{Higuchi:1986py}. 
+\red{This model allows for stable, isotropic Friedmann-Lema\^{\i}tre-Robertson-Walker (FLRW) cosmologies, which other models suffer instabilities in, thereby leading to an experimentally viable cosmology \cite{DeFelice:2015hla}.}
 
-In this paper, we will consider a time-dependent MTMG, specifically one in which the graviton mass is a step-function of time as described in Ref.\ \cite{Fujita:2018ehq} (hereafter the Step Function Mass (SFM) model). We will calculate the energy density of primordial GWs created during inflation, at the present time, in the presence of MG and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether MG, through the primordial GWs, is able to reproduce the observed SGWB.
+In this paper, we will consider a time-dependent MTMG, specifically one in which the graviton mass is a step function of time as described in Ref.\ \cite{Fujita:2018ehq} (hereafter the step function mass (SFM) model). \red{A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example, some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of MG with a time-dependent graviton mass can still be explored with the simplest scheme for time-dependence, the step function, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields.} We will calculate the energy density of primordial GWs created during inflation, at the present time, in the presence of MG and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether MG, through primordial GWs, is able to reproduce the observed SGWB.
 
 The paper is arranged as follows: in section \ref{sec:setup}, we introduce the model and the assumptions we make. In section \ref{sec:energy}, we derive the energy density and discuss its behavior. In section \ref{sec:results}, we compare the model to the signals detected by NANOGrav. In section \ref{sec:discussion}, we discuss the implications of our findings and discuss future work. Throughout this paper, we use  (--,+,+,+) for the Minkowski metric $\eta_{\mu\nu}$ and we use natural units and set $c = $$\ \hbar = $$\ k_B = $$\ 1$. We also set the present day Hubble parameter $H_0 = h_0\ 100 \km \s^{-1}\Mpc^{-1} = 67.66 \km \s^{-1}\Mpc^{-1}$ and the present day density parameters for radiation, matter, curvature, and dark energy $\{\Omega_r, \Omega_m, \Omega_k, \Omega_\Lambda\} = \{9.182\times10^{-5},0.3111,0,0.6889\}$ to match the latest \textit{Planck} 2018 TT, TE, EE + lowE + lensing + BAO data \cite{Planck:2018vyg}.
 
@@ -545,7 +545,7 @@ We model the graviton mass as the function given in Eq.\ 5 of Ref.\ \cite{Fujita
         0 & \tau > \tau_m
    \end{cases} \ ,
 \end{equation} 
-where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. \red{A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example, some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of massive gravity with a time dependent graviton mass can still be explored with the simplest scheme for time-dependence, a step function model, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields.}
+where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. 
 
 \section{Energy Density of gravitational waves}\label{sec:energy}
 When we study models of gravity, we often have to determine how GWs from the primordial era are influenced by deviations from GR. The energy density spectrum of these GWs at the present time as a function of frequency is perhaps the most practical way to observe the effects of beyond-GR theories. We want to look at the energy fraction of the GWs per logarithmic interval of $k$ at the current time. We have the following definition for the energy density 
