--- a/refs.bib
+++ b/refs.bib
@@ -1828,3 +1828,74 @@ archivePrefix = {arXiv},
     pages = "064037",
     year = "2013"
 }
+
+@article{Gumrukcuoglu:2013nza,
+    author = {G\"umr\"uk\c{c}\"uo\u{g}lu, A. Emir and Hinterbichler, Kurt and Lin, Chunshan and Mukohyama, Shinji and Trodden, Mark},
+    title = "{Cosmological Perturbations in Extended Massive Gravity}",
+    eprint = "1304.0449",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1103/PhysRevD.88.024023",
+    journal = "Phys. Rev. D",
+    volume = "88",
+    number = "2",
+    pages = "024023",
+    year = "2013"
+}
+
+@article{DeFelice:2013tsa,
+    author = "De Felice, Antonio and Mukohyama, Shinji",
+    title = "{Towards consistent extension of quasidilaton massive gravity}",
+    eprint = "1306.5502",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "IPMU13-0126",
+    doi = "10.1016/j.physletb.2013.12.041",
+    journal = "Phys. Lett. B",
+    volume = "728",
+    pages = "622--625",
+    year = "2014"
+}
+
+@article{Mukohyama:2013raa,
+    author = "Mukohyama, Shinji",
+    title = "{Boulware-Deser ghost in extended quasidilaton massive gravity}",
+    eprint = "1309.2146",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "IPMU13-0175, YITP-17-63",
+    doi = "10.1103/PhysRevD.96.044029",
+    journal = "Phys. Rev. D",
+    volume = "96",
+    number = "4",
+    pages = "044029",
+    year = "2017"
+}
+
+@article{Kazempour:2022giy,
+    author = "Kazempour, Sobhan and Akbarieh, Amin Rezaei and Motavalli, Hossein and Shao, Lijing",
+    title = "{Cosmology of Dirac-Born-Infeld-de Rham-Gabadadze-Tolley massive gravity}",
+    eprint = "2205.10863",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.106.023508",
+    journal = "Phys. Rev. D",
+    volume = "106",
+    number = "2",
+    pages = "023508",
+    year = "2022"
+}
+
+@article{Kazempour:2022let,
+    author = "Kazempour, Sobhan and Akbarieh, Amin Rezaei",
+    title = "{Cosmology in Brans\textendash{}Dicke\textendash{}de Rham\textendash{}Gabadadze\textendash{}Tolley massive gravity}",
+    eprint = "2204.05595",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.105.123515",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "12",
+    pages = "123515",
+    year = "2022"
+}
