Added new fig 1 and discussions surrounding it

--- a/MG.tex
+++ b/MG.tex
@@ -482,7 +482,7 @@ Recently, attempts have been made to provide ghost-free nonlinear MG  theories, 
 MTMG proposes a novel modification of dRGT: doing away with Lorentz invariance and allowing gravitons to form a 3D rotation group, e.g. \cite{Arkani-Hamed:2003pdi, Rubakov:2004eb, Dubovsky:2004sg, Blas:2009my, Rubakov:2008nh, Blas:2007zz, Comelli:2013txa, Langlois:2014jba}. This no longer requires the existence of five degrees of freedom, \red{and due to the lack of observations of new propagating degrees of freedom, we consider MTMG in this paper.} In this model, we no longer have to consider the Higuchi bound, which ordinarily requires that the ratio of the mass of the graviton to the Hubble scale of inflation be up to an order of unity \cite{Higuchi:1986py}. 
 \red{This model allows for stable, isotropic Friedmann-Lema\^{\i}tre-Robertson-Walker (FLRW) cosmologies, which other models suffer instabilities in, thereby leading to an experimentally viable cosmology \cite{DeFelice:2015hla}.}
 
-In this paper, we will consider a time-dependent MTMG, specifically one in which the graviton mass is a step function of time as described in Ref.\ \cite{Fujita:2018ehq} (hereafter the step function mass (SFM) model). \red{A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example, some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of MG with a time-dependent graviton mass can still be explored with the simplest scheme for time-dependence, the step function, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields.} We will calculate the energy density of primordial GWs created during inflation, at the present time, in the presence of MG and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether MG, through primordial GWs, is able to reproduce the observed SGWB.
+In this paper, we will consider a time-dependent MTMG, specifically one in which the graviton mass is a step function of time as described in Ref.\ \cite{Fujita:2018ehq} (hereafter the step function mass (SFM) model). We will calculate the energy density of primordial GWs created during inflation, at the present time, in the presence of MG and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether MG, through primordial GWs, is able to reproduce the observed SGWB.
 
 The paper is arranged as follows: in section \ref{sec:setup}, we introduce the model and the assumptions we make. In section \ref{sec:energy}, we derive the energy density and discuss its behavior. In section \ref{sec:results}, we compare the model to the signals detected by NANOGrav. In section \ref{sec:discussion}, we discuss the implications of our findings and discuss future work. Throughout this paper, we use  (--,+,+,+) for the Minkowski metric $\eta_{\mu\nu}$ and we use natural units and set $c = $$\ \hbar = $$\ k_B = $$\ 1$. We also set the present day Hubble parameter $H_0 = h_0\ 100 \km \s^{-1}\Mpc^{-1} = 67.66 \km \s^{-1}\Mpc^{-1}$ and the present day density parameters for radiation, matter, curvature, and dark energy $\{\Omega_r, \Omega_m, \Omega_k, \Omega_\Lambda\} = \{9.182\times10^{-5},0.3111,0,0.6889\}$ to match the latest \textit{Planck} 2018 TT, TE, EE + lowE + lensing + BAO data \cite{Planck:2018vyg}.
 
@@ -521,8 +521,8 @@ where $\overline{h}_k = ah_k$, the primes ($\,'$) have been redefined to indicat
 
 \begin{figure}[t]
 \centering
-\includegraphics[scale=0.65]{fig1.pdf}
-\caption{Evolution of the real part of $\overline{h}_k(\tau)$. There is a gap in the domain of the conformal time from $-\tau_r$ to $\tau_r$, but $\overline{h}_k(\tau)$ and $\overline{h}_k'(\tau)$ remain continuous. This is a numerical solution to Eq.\ \ref{eqn:eom}, and the exact values for the parameters are detailed in the source code \cite{GH}.}
+\includegraphics[scale=0.75]{fig1.pdf}
+\caption{Evolution of the real part of $\overline{h}_k(\tau)$. \red{We note that conformal time jumps from $-\tau_r$ to $\tau_r$.}. This is a numerical solution to Eq.\ \ref{eqn:eom}, and the exact values for the parameters are detailed in the source code \cite{GH}.}
  \label{fig:mode}
 \end{figure}
 
@@ -535,7 +535,7 @@ The scale factor, as described in Eq.\ 4 of Ref.\ \cite{Fujita:2018ehq}, is
         a_r \tau/\tau_r & \tau > \tau_r \\
    \end{cases} \ ,
 \end{equation}
-where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the CMB exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $a_r$ is fixed in this discussion, while $H_{\inf}$ and $\tau_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing the discontinuity in the conformal time. The behavior in the three regions of $\tau$ is discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
+where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the CMB exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $a_r$ is fixed in this discussion, while $H_{\inf}$ and $\tau_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. \red{The conformal time jumps in value from $-\tau_r$ to $\tau_r$, This is to allow for the scale factor and its first $\tau$ derivative to remain continuous.} Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like. The behavior in the three regions of $\tau$ is discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
 
 We model the graviton mass as the function given in Eq.\ 5 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:mass_case}
@@ -545,7 +545,7 @@ We model the graviton mass as the function given in Eq.\ 5 of Ref.\ \cite{Fujita
         0 & \tau > \tau_m
    \end{cases} \ ,
 \end{equation} 
-where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. 
+where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. \red{A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example, some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of MG with a time-dependent graviton mass can still be explored with the simplest scheme for time-dependence, the step function, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields. Thus, we proceed with the SFM model.}
 
 \section{Energy Density of gravitational waves}\label{sec:energy}
 When we study models of gravity, we often have to determine how GWs from the primordial era are influenced by deviations from GR. The energy density spectrum of these GWs at the present time as a function of frequency is perhaps the most practical way to observe the effects of beyond-GR theories. We want to look at the energy fraction of the GWs per logarithmic interval of $k$ at the current time. We have the following definition for the energy density 
