--- a/refs.bib
+++ b/refs.bib
@@ -1899,3 +1899,32 @@ archivePrefix = {arXiv},
     pages = "123515",
     year = "2022"
 }
+
+@article{Nakayama:2011ri,
+    author = "Nakayama, Kazunori and Takahashi, Fuminobu",
+    title = "{Low-scale Supersymmetry from Inflation}",
+    eprint = "1108.0070",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TU-887, IPMU11-0127",
+    doi = "10.1088/1475-7516/2011/10/033",
+    journal = "JCAP",
+    volume = "10",
+    pages = "033",
+    year = "2011"
+}
+
+@article{Takahashi:2018tdu,
+    author = "Takahashi, Fuminobu and Yin, Wen and Guth, Alan H.",
+    title = "{QCD axion window and low-scale inflation}",
+    eprint = "1805.08763",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MIT-CTP/5022, TU-1064, IPMU18-0088, MIT-CTP-5022",
+    doi = "10.1103/PhysRevD.98.015042",
+    journal = "Phys. Rev. D",
+    volume = "98",
+    number = "1",
+    pages = "015042",
+    year = "2018"
+}
