Added the new references people requested via email: Shi email: -Pi:2021dft (scalar) -Domenech:2020ers (scalar) King email -Wang:2023ost (primordial black holes via scalar) -Wang:2023sij (scalar) -Zhao:2023joc (scalar) this citation doesnt exist anymore on inspires or arxiv, so i didnt include it in the references -He:2023ado (first order phase transition) Yann email -Gouttenoire:2023bqy (first-order phase transitions in the early universe) -Gouttenoire:2023ftk (domain wall)

--- a/refs.bib
+++ b/refs.bib
@@ -1910,3 +1910,109 @@ archivePrefix = {arXiv},
     year = "2018"
 }
 
+@article{Pi:2021dft,
+    author = "Pi, Shi and Sasaki, Misao",
+    title = "{Primordial black hole formation in nonminimal curvaton scenarios}",
+    eprint = "2112.12680",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "IPMU21-0075, YITP-21-131",
+    doi = "10.1103/PhysRevD.108.L101301",
+    journal = "Phys. Rev. D",
+    volume = "108",
+    number = "10",
+    pages = "L101301",
+    year = "2023"
+}
+
+@article{Domenech:2020ers,
+    author = "Dom\`enech, Guillem and Pi, Shi",
+    title = "{NANOGrav hints on planet-mass primordial black holes}",
+    eprint = "2010.03976",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "IPMU20-0106",
+    doi = "10.1007/s11433-021-1839-6",
+    journal = "Sci. China Phys. Mech. Astron.",
+    volume = "65",
+    number = "3",
+    pages = "230411",
+    year = "2022"
+}
+
+@article{Wang:2023ost,
+    author = "Wang, Sai and Zhao, Zhi-Chao and Li, Jun-Peng and Zhu, Qing-Hua",
+    title = "{Implications of pulsar timing array data for scalar-induced gravitational waves and primordial black holes: Primordial non-Gaussianity fNL considered}",
+    eprint = "2307.00572",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevResearch.6.L012060",
+    journal = "Phys. Rev. Res.",
+    volume = "6",
+    number = "1",
+    pages = "L012060",
+    year = "2024"
+}
+
+@article{Wang:2023sij,
+    author = "Wang, Sai and Zhao, Zhi-Chao and Zhu, Qing-Hua",
+    title = "{Constraints on scalar-induced gravitational waves up to third order from a joint analysis of BBN, CMB, and PTA data}",
+    eprint = "2307.03095",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevResearch.6.013207",
+    journal = "Phys. Rev. Res.",
+    volume = "6",
+    number = "1",
+    pages = "013207",
+    year = "2024"
+}
+
+@article{He:2023ado,
+       author = {{He}, Song and {Li}, Li and {Wang}, Sai and {Wang}, Shao-Jiang},
+        title = "{Constraints on holographic QCD phase transitions from PTA observations}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = aug,
+          eid = {arXiv:2308.07257},
+        pages = {arXiv:2308.07257},
+          doi = {10.48550/arXiv.2308.07257},
+archivePrefix = {arXiv},
+       eprint = {2308.07257},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230807257H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Gouttenoire:2023bqy,
+    author = "Gouttenoire, Yann",
+    title = "{First-Order Phase Transition Interpretation of Pulsar Timing Array Signal Is Consistent with Solar-Mass Black Holes}",
+    eprint = "2307.04239",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevLett.131.171404",
+    journal = "Phys. Rev. Lett.",
+    volume = "131",
+    number = "17",
+    pages = "171404",
+    year = "2023"
+}
+
+@article{Gouttenoire:2023ftk,
+       author = {{Gouttenoire}, Yann and {Vitagliano}, Edoardo},
+        title = "{Domain wall interpretation of the PTA signal confronting black hole overproduction}",
+      journal = {arXiv e-prints},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2023,
+        month = jun,
+          eid = {arXiv:2306.17841},
+        pages = {arXiv:2306.17841},
+          doi = {10.48550/arXiv.2306.17841},
+archivePrefix = {arXiv},
+       eprint = {2306.17841},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230617841G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
