Made final changes to inflation  discussion

--- a/refs.bib
+++ b/refs.bib
@@ -2016,3 +2016,45 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Antusch:2024nqg,
+    author = {{Antusch}, Stefan and {Hinze}, Kevin and {Saad}, Shaikh},
+        title = "{Explaining PTA Results by Metastable Cosmic Strings from SO(10) GUT}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = jun,
+          eid = {arXiv:2406.17014},
+        pages = {arXiv:2406.17014},
+          doi = {10.48550/arXiv.2406.17014},
+archivePrefix = {arXiv},
+       eprint = {2406.17014},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240617014A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Vagnozzi:2023lwo,
+    author = "Vagnozzi, Sunny",
+    title = "{Inflationary interpretation of the stochastic gravitational wave background signal detected by pulsar timing array experiments}",
+    eprint = "2306.16912",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1016/j.jheap.2023.07.001",
+    journal = "JHEAp",
+    volume = "39",
+    pages = "81--98",
+    year = "2023"
+}
+
+@article{Drees:2021wgd,
+    author = "Drees, Manuel and Xu, Yong",
+    title = "{Small field polynomial inflation: reheating, radiative stability and lower bound}",
+    eprint = "2104.03977",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1088/1475-7516/2021/09/012",
+    journal = "JCAP",
+    volume = "09",
+    pages = "012",
+    year = "2021"
+}
